<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_filter"
        android:title="@string/filter_menuitem"
        icon="@drawable/ic_filter_variant_white_24dp"
        app:showAsAction="always|withText">
        <menu>
            <item
                android:id="@+id/submenu_like"
                android:title="@string/like_menuitem" />
            <item
                android:id="@+id/submenu_dislike"
                android:title="@string/dislike_menuitem" />
            <item
                android:id="@+id/submenu_unrated"
                android:title="@string/unrated_menuitem" />
            <item
                android:id="@+id/submenu_show_all"
                android:title="@string/show_all_menuitem" />
        </menu>
    </item>
</menu>